k8s/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: travel-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: travel-frontend
  template:
    metadata:
      labels:
        app: travel-frontend
    spec:
      containers:
      - name: frontend
        image: sheethalshobi/project-travel-frontend
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: travel-frontend-service
spec:
  type: NodePort
  selector:
    app: travel-frontend
  ports:
    - protocol: TCP
      port: 80         # Service port
      targetPort: 80   # Container port
      nodePort: 30080  # NodePort (range: 30000-32767)
