k8s/holiday-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: holiday-db
spec:
  serviceName: "holiday-db"
  replicas: 1
  selector:
    matchLabels:
      app: holiday-db
  template:
    metadata:
      labels:
        app: holiday-db
    spec:
      containers:
        - name: mongo
          image: mongo:6
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data/db
  volumeClaimTemplates:
    - metadata:
        name: mongo-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: holiday-db
spec:
  selector:
    app: holiday-db
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
