k8s/recommendation-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendation-backend
  labels:
    app: recommendation-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: recommendation-backend
  template:
    metadata:
      labels:
        app: recommendation-backend
    spec:
      containers:
        - name: recommendation-backend
          image: sheethalshobi/project-recommendation-backend:latest
          ports:
            - containerPort: 5004
---
apiVersion: v1
kind: Service
metadata:
  name: recommendation-backend
spec:
  selector:
    app: recommendation-backend
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
  type: ClusterIP
